# Teaching-Assistant

./: .cursorrules  .dockerignore  .env  .gitignore  Dockerfile  README.md  interface.md  startup.sh
.github/workflows/: docker-build.yml
backend/: .gitignore  download_models.py  pyproject.toml  rag.db  schema.sql
backend/app/: __init__.py  __main__.py  config.py  config.toml  main.py
backend/app/api/: api.py
backend/app/api/endpoints/: knowledge.py  models.py  query.py
backend/app/database/: __init__.py
backend/app/embedding/: __init__.py  chunk.py  config.yaml  doc_to_text_utils.py  document_ocr.py
backend/app/llm/: __init__.py  ollama_client.py  svg_gen.py  test_llm.py  tool_use.py  workflow.py
backend/app/schemas/: document.py  model.py  query.py
backend/app/services/: document_service.py  model_service.py  query_service.py
backend/app/utils/: __init__.py  llm_utils.py  pdf.py  test_llm_utils.py
backend/tests/: conftest.py  test_document_api.py  test_embedding.py
frontend/: .cursorrules  .env  .env.production  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  MainLayout.tsx  index.css  main.tsx
frontend/src/components/: ChatMessage.tsx  FollowUpQuestions.tsx  KnowledgeGraph.tsx  MarkdownRenderer.tsx  Thinking.tsx  WorkflowTimeline.tsx
frontend/src/components/DocumentManagement/: DocumentList.tsx  FileUploadModal.tsx  katex.min.css
frontend/src/components/layout/: Navbar.tsx  Sidebar.tsx
frontend/src/components/ui/: dropdown-menu.tsx  toast.tsx  use-toast.tsx
frontend/src/config/: backend.tsx  index.ts
frontend/src/context/: ModeContext.tsx
frontend/src/lib/: api.ts  knowledge_api.ts  model_api.ts  query_api.ts
frontend/src/pages/: ChatApp.tsx  DocumentManagementApp.tsx  ModelConfigPage.tsx
frontend/src/types/: chat.ts  document.ts  model.ts
single_test/: README.md  pdocr.py  pyproject.toml  surya_layout.py  附加公式长度对向量化的影响.py
